<resources>
    <string name="app_name">MaterialPersonas</string>
    <string name="action_settings">Settings</string>
    <string name="titulo">Crear Personas</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">GUARDAR</string>
    <string name="borrar">BORRAR</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>

    <string-array name="sexo">
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>

    <string name="mensaje_guardado_exitoso">Persona guardada exitosamente</string>

</resources>
